@@ -5,6 +5,9 @@ HISTORY
 1.1rc5 (unreleased)
 -------------------
 
+- Fix for static image sizes.
+  [robgietema]
+
 - Added richTextWidget to list of valid classes for a rich text widget to
   support non-AT widgets.
   [robgietema]
